
name:               generate-server
version:            0.5
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           To be written
category:           
tested-with:        GHC
build-type:         Simple

description:
    To be written.

source-repository head
    type:               git
    location:           git://github.com/hanshoglund/generate-server.git

library
    build-depends:
        base            >= 4 && < 5
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:
        Sound.Generate

executable "generate-server"
    build-depends:
        base            >= 4 && < 5
    hs-source-dirs:     src
    default-language:   Haskell2010
    main-is:
        Main.hs
